<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvOrdenarGasolineras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="ORDENAR GASOLINERAS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPtosInteres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Puntos de interes"
        app:layout_constraintStart_toStartOf="@+id/spinnerPtosInteres"
        app:layout_constraintTop_toBottomOf="@+id/tvOrdenarGasolineras" />

    <Spinner
        android:id="@+id/spinnerPtosInteres"
        android:layout_width="255dp"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPtosInteres" />

    <Button
        android:id="@+id/btnOrdenar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ORDENAR"
        app:layout_constraintStart_toStartOf="@+id/spinnerPtosInteres"
        app:layout_constraintTop_toTopOf="@+id/btnCancelar" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="CANCELAR"
        app:layout_constraintEnd_toEndOf="@+id/spinnerPtosInteres"
        app:layout_constraintTop_toBottomOf="@+id/tvListaVacia" />

    <TextView
        android:id="@+id/tvListaVacia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Error: No hay ningun punto de interes añadido"
        android:textColor="#FF0000"
        android:textStyle="bold|italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPtosInteres" />

    <Space
        android:layout_width="0dp"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCancelar" />
</androidx.constraintlayout.widget.ConstraintLayout>