...
    <item
        android:id="@+id/menuFiltrar"
        android:icon="@drawable/filter"
        android:title="filtrar"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuOrdenar"
        android:icon="@drawable/ordenar"
        android:title="ordenar"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuItemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/info" />
    <item
        android:id="@+id/menuItemAnhadirPuntoInteres"
        android:checkable="false"
        android:title="Añadir Punto interés" />

</menu>
